--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,8 +3,8 @@
 }
 
 :root {
-  --primary: #44e9ff;
-  --secondary: #387b85;
+  --primary: #65ffba;
+  --secondary: #286ac6;
   --tertiary: rgb(192, 246, 253);
   --grey: #333;
   font-size: 62.5%;
@@ -18,7 +18,7 @@ body {
   display: flex;
   min-height: 100vh;
   flex-direction: column;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family:Georgia, 'Times New Roman', Times, serif;
 }
 
 header {
